// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using crlf end of line from ".editorconfig" 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🅰️ Set in the \`a\` configuration.\\
🅱️ Set in the \`B\` configuration.\\
🌊 Set in the \`c\` configuration.

| Name                 | 💼         |
| :------------------- | :--------- |
| [a](docs/rules/a.md) | 🅰️ 🅱️ 🌊 |
| [B](docs/rules/B.md) |            |
| [c](docs/rules/c.md) |            |

<!-- end auto-generated rules list -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using crlf end of line from ".editorconfig" 2`] = `
"# test/a

💼 This rule is enabled in the following configs: 🅰️ \`a\`, 🅱️ \`B\`, 🌊 \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using crlf end of line from ".editorconfig" 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using crlf end of line from ".editorconfig" 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using lf end of line from ".editorconfig" 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🅰️ Set in the \`a\` configuration.\\
🅱️ Set in the \`B\` configuration.\\
🌊 Set in the \`c\` configuration.

| Name                 | 💼         |
| :------------------- | :--------- |
| [a](docs/rules/a.md) | 🅰️ 🅱️ 🌊 |
| [B](docs/rules/B.md) |            |
| [c](docs/rules/c.md) |            |

<!-- end auto-generated rules list -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using lf end of line from ".editorconfig" 2`] = `
"# test/a

💼 This rule is enabled in the following configs: 🅰️ \`a\`, 🅱️ \`B\`, 🌊 \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using lf end of line from ".editorconfig" 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using lf end of line from ".editorconfig" 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using the end of line from ".editorconfig" while respecting the .md specific end of line setting 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🅰️ Set in the \`a\` configuration.\\
🅱️ Set in the \`B\` configuration.\\
🌊 Set in the \`c\` configuration.

| Name                 | 💼         |
| :------------------- | :--------- |
| [a](docs/rules/a.md) | 🅰️ 🅱️ 🌊 |
| [B](docs/rules/B.md) |            |
| [c](docs/rules/c.md) |            |

<!-- end auto-generated rules list -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using the end of line from ".editorconfig" while respecting the .md specific end of line setting 2`] = `
"# test/a

💼 This rule is enabled in the following configs: 🅰️ \`a\`, 🅱️ \`B\`, 🌊 \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using the end of line from ".editorconfig" while respecting the .md specific end of line setting 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`getEndOfLine with a ".editorconfig" file generates using the correct end of line when ".editorconfig" exists generates using the end of line from ".editorconfig" while respecting the .md specific end of line setting 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;
